Cleanup iteration #2