@@ -199,13 +199,13 @@ public abstract class AbstractDynamoDBQueryCreator<T, ID, R>
         // the value type should be the actual value's type, not the collection type.
         // For example, if tags is Set<String> and we're checking contains("tag-a"),
         // we should use String.class as the type, not Set.class.
-        Class<?> valueType = leafNodePropertyType;
+        Class<?> valueType;
 
         if (ObjectUtils.isArray(in)) {
             List<?> list = Arrays.asList(ObjectUtils.toObjectArray(in));
             Assert.isTrue(list.size() == 1,
                     "Only one value is supported: please specify a value for '\" + leafNodePropertyName + \"'\"");
-            Object value = list.get(0);
+            Object value = list.getFirst();
             // Use the actual value's type for conversion
             valueType = value != null ? value.getClass() : leafNodePropertyType;
             return criteria.withSingleValueCriteria(leafNodePropertyName, comparisonOperator, value,
@@ -223,7 +223,7 @@ public abstract class AbstractDynamoDBQueryCreator<T, ID, R>
                     valueType);
         } else {
             // Use the actual value's type for conversion
-            valueType = in != null ? in.getClass() : leafNodePropertyType;
+            valueType = in.getClass();
             return criteria.withSingleValueCriteria(leafNodePropertyName, comparisonOperator, in, valueType);
         }
     }
